# cudnntests

./: .gitignore
cublas/: CMakeLists.txt  cublastests01.c
edgedetector/: CMakeLists.txt  edgedetector.cu  modules.list
mnist/: CMakeLists.txt  readmnist.c  readmnist.h  simplemnist.cpp  simplemnist.cu
